# inspect_ai

./: inspect_ai_tutorial_week_1.ipynb  inspect_ai_tutorial_week_2.ipynb  inspect_ai_tutorial_week_3.ipynb  inspect_ai_tutorial_week_4.ipynb  pyproject.toml
logs/: 2026-04-15T10-25-19-00-00_hello-model_4EQBb2SyXaQnUZeN5fgioz.eval  2026-04-15T10-25-20-00-00_hello-model_Vm93f5eeqBkmq2HDpwsgZu.eval  2026-04-15T10-25-29-00-00_example-system-message_D2iCsfh7Fin7BMVaBpRSqP.eval  2026-04-15T10-25-32-00-00_example-prompt-template_iV8kjh34o28QKvK5bbNGjo.eval  2026-04-15T10-25-40-00-00_example-chain-of-thought_hx7gqAMLA7HRV2FJC5ZpZk.eval  2026-04-15T10-25-49-00-00_example-multiple-choice-with-cot_S49YwX3mSsDd6ggVH6GFGB.eval  2026-04-15T10-25-55-00-00_yes-no-classification_UjPNEh2Dc4fGFuyoaVjFkT.eval  2026-04-15T10-26-02-00-00_sentiment-classification_o9RhUZ3wpLYMaoZmkwg3Fa.eval  2026-04-15T10-26-07-00-00_choice-with-reasoning_PbLpPsugbXgN9HvQ52rHhJ.eval  2026-04-15T10-26-17-00-00_mc-with-metadata_j734sBfNBAQXKphgby8Vk9.eval  2026-04-15T10-26-20-00-00_mc-multiple-correct_hftc3CeiU5Te8B54nvAyGg.eval  2026-04-15T10-26-21-00-00_position-bias-task_n8kt6AJhLJqSA7pGB4wHb9.eval  2026-04-15T10-27-24-00-00_position-bias-task_LwXyxWRgL22aHZBFK2AhJX.eval  2026-04-15T15-16-38-00-00_mmlu-subset_fQ2CppEKBhmnXke3kiqgCT.eval  2026-04-15T15-17-02-00-00_mmlu-subset_VGJMoBPPKQhixtNVu5d2sG.eval  2026-04-15T15-18-54-00-00_mmlu-subset_ntkMcjfPFcgprMR85R5Bvh.eval  2026-04-15T15-21-08-00-00_mmlu-subset_dYaZSsoTGcEW8xvwPcbDUh.eval  2026-04-15T15-23-45-00-00_mmlu-subset_AY8BvV9WyvazvJ2ZPLHqMF.eval  (+87 more)
