[project]
name = "inspect_ai_course"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "datasets>=4.8.4",
    "inspect-ai>=0.3.205",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
]
